--- a/css/ui/_typography.scss
+++ b/css/ui/_typography.scss
@@ -20,7 +20,7 @@ h2 {
     font-size: 1.625em;
 }
 h3,
-.article-date {
+.articles-list .article-date {
     font-family: $secondary-font-stack;
     font-size: 1.125em;
     font-weight: 600;
